<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img2">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title"
        android:textSize="70dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="30dp"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/usernameTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="30dp"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:hint="@string/emailTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/passwordTxt" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/design_default_color_on_primary"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/design_default_color_on_primary"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="20dp"
        tools:ignore="TextContrastCheck" />


</LinearLayout>