<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History"
    android:orientation="vertical"
    android:background="@drawable/img_1"
    android:padding="20dp">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/history_title"
        android:textSize="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/username"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/historyRecyclerView"/>

    </LinearLayout>

    <Button
        android:id="@+id/returnHomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_return_homepage"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

</LinearLayout>




